# rust-xmlsec

./: .gitignore  COPYING  Cargo.toml  LICENSE  README.md  bindings.h  bindings.rs  vcpkg.json
examples/: signature.rs
src/: bindings.rs  error.rs  keys.rs  lib.rs  templates.rs  transforms.rs  xmldsig.rs  xmlsec.rs
src/crypto/: mod.rs  openssl.rs
src/exts/: mod.rs  xml.rs
tests/: test_dsig.rs  test_keys.rs  test_templating.rs
tests/resources/: data.json  key.crt  key.pem  sign1-res.xml  sign2-doc.xml  sign2-res.xml  sign2-tmpl-ns-prefix-dsig.xml  sign2-tmpl.xml  sign3-doc.xml  sign3-signed.xml  sign4-signed.xml  sign4-tmpl.xml
